--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,11 @@
         "./Basics/Figures/Point.ts",
         "./Basics/Figures/MyLine.ts",
 
+        "./Basics/Grid/Grid.ts",
         "./Basics/Grid/HorizontalGrid.ts",
         "./Basics/Grid/VerticalGrid.ts",
         "./Basics/Grid/CombinedGrid.ts",
+        
 
         "./Basics/Figures/Arrow.ts",        
 
