--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 
         "./Basics/Figures/Point.ts",
         "./Basics/Figures/MyLine.ts",
+        "./Basics/Figures/Dot.ts",
 
         "./Basics/Grid/Grid.ts",
         "./Basics/Grid/HorizontalGrid.ts",
@@ -25,7 +26,9 @@
         
         "./Basics/Axises/Axis.ts",
         "./Basics/Axises/xAxis.ts",    
-        "./Basics/Axises/yAxis.ts",     
+        "./Basics/Axises/yAxis.ts",   
+        
+        "./Charts/ScatterChart.ts",
 
         
         "main.ts"
