utils added. Have to find out how to set normal scales ❤

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,10 @@
         "outFile": "main.js",
         "sourceMap": true
     },
-    "files": [   
+    "files": [
+
+        "./Utils/myMath.ts",
+
         "./Model/Model.ts",
 
         "./Basics/Figures/Point.ts",
