ScatterChart.ts, LineChart.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "files": [
 
         "./Utils/myMath.ts",
+        "./Utils/JSONParser.ts",
+        "./Utils/Sorter.ts",
 
         "./Model/Model.ts",
 
@@ -31,7 +33,9 @@
         "./Basics/Axises/xAxis.ts",    
         "./Basics/Axises/yAxis.ts",   
         
+        "./Charts/Chart.ts",
         "./Charts/ScatterChart.ts",
+        "./Charts/LineChart.ts",
 
         
         "main.ts"
